[package]
name = "hpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
zip = "0.5"
